# Scallop

./: .travis.yml  CMakeLists.txt  README.md  scallop.cpp
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/lib/: Makefile  cmake_install.cmake
html/: index.html
http/: Http.cpp  Http.hpp
json/: CMakeLists.txt
log/: CMakeLists.txt  LogFile.cpp  LogFile.hpp  Logdef.hpp  Logger.cpp  Logger.hpp  log.cpp  log.hpp  main.cpp
log/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  logtest  openfile.txt
